<resources>
    <string name="app_name">DMA_T2P</string>
    <string name="add_task">Add Task</string>
    <string name="button_save">Save</string>
    <string name="hintTaskName">Task Name</string>
    <string name="hintNumberOfTasks">Number of Tasks</string>
    <string name="hintTaskStartingDate">Starting Date(DD/MM/YYY)</string>
    <string name="hintTaskDueDate">Due Date (DD/MM/YYY)</string>
    <string name="hintAssignmentID">Assignment ID/Unit</string>
    <string name="hintAssignmentName">Assignment Name</string>
    <string name="button_main_activity">View Assignments</string>
    <string name="button_assignment_activity">View Task</string>
    <string name="hintAssignmentNumberOfTasks">Assignment Number of Tasks </string>
    <string name="AssignmentStatus">Assignment Status</string>
    <string name="hint_assignment">Add Assignment</string>


    <string name="empty_not_saved">Task not saved because it is empty or incomplete.</string>
    <string name="assignment_empty_not_saved">Assignment not saved because it is empty or incomplete.</string>

</resources>