<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hintTaskName"
        android:inputType="textAutoComplete"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/editNumberOfTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hintNumberOfTasks"
        android:inputType="number"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTaskStartingDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hintTaskStartingDate"
        android:inputType="date"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTaskDueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hintTaskDueDate"
        android:inputType="date"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editAssignmentID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hintAssignmentID"
        android:inputType="number"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editAssignmentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hintAssignmentName"
        android:inputType="textAutoComplete"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel" />


</LinearLayout>